# platform.core.api.smartcard

./: AUTHORS  CMakeLists.txt  capi-network-smartcard.pc.in  project.config
doc/mobile/: smartcard_doc.h
doc/wearable/: smartcard_doc.h
include/: smartcard.h  smartcard_debug.h
packaging/: capi-network-smartcard.spec
src/: SEService.cpp  smartcard.c
test/: CMakeLists.txt  smartcard_unit_test.c
